dimagi-SalesforceFB/src/objects/OpportunityCountry__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country_Closed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Closed</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Opportunities (Closed)</relationshipLabel>
        <relationshipName>Opportunity_Countries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Open__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Open</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Opportunities (Open)</relationshipLabel>
        <relationshipName>Opportunity_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Opportunity Countries (Country)</relationshipLabel>
        <relationshipName>OpportunityCountries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Opportunity__r.Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp. Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp. Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Location</label>
        <referenceTo>Opportunity_Location__c</referenceTo>
        <relationshipName>OpportunityCountries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>OpportunityCountries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Opportunity__r.Fogbugz_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Opportunity Country</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>OpportunityCountry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>